<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/acessar_conta"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="334dp"
        android:background="@drawable/radius"
        android:backgroundTint="#81D643"
        android:shadowColor="#FFFFFF"
        android:text="@string/acessar_conta"
        android:textColor="#0E0808"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/criar_conta"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/radius"
        android:backgroundTint="#C0CC1F"
        android:text="@string/criar_conta"
        android:textColor="#170C0C"
        app:layout_constraintEnd_toEndOf="@+id/acessar_conta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/acessar_conta"
        app:layout_constraintTop_toBottomOf="@+id/acessar_conta" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="92dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="97dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/image_descrip"
        app:layout_constraintBottom_toTopOf="@+id/acessar_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ybank" />

</androidx.constraintlayout.widget.ConstraintLayout>