<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nEditAgencia"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/radius"
        android:backgroundTint="#595757"
        android:textColorHint="#000000"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:layout_constraintBottom_toTopOf="@+id/nEditConta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nAgenciaLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#F8F8F8"
            android:hint="@string/agencia"
            android:inputType="number"
            android:maxLength="4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#0B0101"
            android:textColorHint="#FF0000"
            android:textColorLink="#0047FF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nEditSenha"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/radius"
        android:backgroundTint="#595757"
        android:textColorHint="#040000"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nEditConta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/senha"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#0B0101"
            android:textColorHint="#FF0000"
            android:textColorLink="#0047FF"
            android:maxLength="8"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nEditConta"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/radius"
        android:backgroundTint="#595757"
        android:textColorHint="#000000"
        android:maxLength="6"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nContaLogin"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:backgroundTint="#F8F8F8"
            android:hint="@string/conta"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#0C0000"
            android:textColorHint="#FF0000"
            android:textColorLink="#00B0FF" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="120dp"
        android:text="@string/salvar_dados"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="33dp"
        android:text="@string/login_instruction"
        android:textColor="#170505"
        android:textColorHighlight="#0E0303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/esqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="266dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="120dp"
        android:text="@string/esqueci_senha"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/radius"
        android:backgroundTint="#2EA6DC"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="450dp"
        android:contentDescription="@string/image_descrip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconepessoa" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@drawable/y_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@drawable/y_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>